dark mode fix

--- a/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/core/_dark_mode.scss
+++ b/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/core/_dark_mode.scss
@@ -3,7 +3,7 @@
     color: $white;
 
 
-    header, .features, .download, .want, .contact, .manage, .integrate, footer, .courses, #overview, #dontWant, #saved-courses {
+    header, .features, .download, .want, .contact, .manage, .integrate, footer, .courses, #overview, #dontWant, #saved-courses, #card-chat {
         background-color: #151822 !important;
     }
 
@@ -126,7 +126,13 @@
         }
     }
 
+    #card-chat {
+        border: 0.063rem solid $gray-700;
 
+        .card-header {
+            color: $white !important;
+        }
+    }
 
     .download {
         .content-info {
