--- a/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/sections/_account_details.scss
+++ b/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/sections/_account_details.scss
@@ -34,7 +34,7 @@
         .user {
             grid-area: userinfo;
             @include standard-text;
-            border-right: 1px solid $gray-200;
+            border-right: none;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -46,6 +46,7 @@
 
             @include md {
                 justify-content: space-around;
+                border-right: 1px solid $gray-500;
             }
 
             @include lg {
@@ -195,7 +196,7 @@
 
 
             .form-basicinfo {
-                
+
 
 
 
