--- a/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/sections/_account_saved_courses.scss
+++ b/FrontEnd_silicon/FrontEnd_silicon/wwwroot/css/scss/sections/_account_saved_courses.scss
@@ -42,7 +42,7 @@
         .user {
             grid-area: userinfo;
             @include standard-text;
-            border-right: 1px solid $gray-200;
+            border-right: none;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -55,6 +55,7 @@
 
             @include md {
                 justify-content: space-around;
+                border-right: 1px solid $gray-500;
             }
 
             @include lg {
